package io.github.tt432.eyelib.client.manager;

import io.github.tt432.eyelib.client.entity.BrClientEntity;

public class ClientEntityManager extends Manager<BrClientEntity> {
    public static final ClientEntityManager INSTANCE = new ClientEntityManager();
}
